# openai-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  context7.json  dyn_config.patch  dyn_config.sh  fix_clippy.py  fix_clippy2.py  fix_node.py  fix_node2.py  fix_reasoning.py  fix_rust.py  patch.py  patch2.py  patch3.py  patch4.py  patch_chat.py  patch_client.py  patch_client_clean.py  patch_client_loop.py  patch_client_middleware.py  patch_client_strict.py  patch_dts.sh  patch_lib.py  patch_node_chat.py  patch_o_fields.py  patch_reasoning.py  patch_reasoning2.py  patch_reasoning_correct.py  patch_req.py  patch_responses.sh  patch_responses_opts.py  patch_responses_tools.py  patch_stream_opts.py  patch_tools.py  patch_tools_advanced.py  patch_ws.py  (+4 more)
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release-node.yml  release.yml
.solo/pipelines/: progress.md
.solo/states/: deploy
benchmarks/: README.md  all.md  generate.py  node.md  python.md  results.json  rust.md  update-readme.py
benchmarks/rust-compare/: Cargo.toml  main.rs
blog/: devto-article.md  hn-multiplatform.md  ih-post.md
docs/: evolution.md  roadmap.md
docs/plan-done/advanced/: plan.md  spec.md
docs/plan-done/azure-support/: spec.md
docs/plan-done/ergonomics/: spec.md
docs/plan-done/remaining/: spec.md
docs/plan-done/request-options/: plan.md  spec.md
docs/plan-done/type-quality/: plan.md
docs/plan/advanced/: plan.md  spec.md
docs/plan/azure-support/: plan.md
docs/plan/ergonomics/: plan.md
docs/plan/pagination/: plan.md  spec.md
docs/plan/phase1/: plan.md
docs/plan/remaining/: plan.md
docs/plan/request-options/: plan.md
docs/plan/type-quality/: plan.md  spec.md
docs/retro/: 2026-03-20-retro.md
docs/src/: SUMMARY.md  introduction.md  openai-mapping.md  quickstart.md
docs/src/guides/: benchmarks.md  hedged-requests.md  streaming.md  structured-output.md  types.md  wasm.md  webhooks.md  websockets.md
docs/src/migration/: from-async-openai.md  from-openai-python.md
examples/: bench_python.py  benchmark.rs  chat.rs  chat_stream.rs  integration_test.rs  live_features_test.rs  live_gpt54.rs  responses_api.rs  structured_output.rs  test_stream_fc.rs  tool_calling.rs  websocket.rs
examples/cloudflare-worker/: Cargo.toml  README.md  playground.html
examples/cloudflare-worker-dioxus/: README.md  build.sh
examples/cloudflare-worker-dioxus/frontend/: Cargo.toml  Dioxus.toml
examples/cloudflare-worker-dioxus/frontend/src/: main.rs
examples/cloudflare-worker-dioxus/worker/: Cargo.toml  wrangler.toml
examples/cloudflare-worker-dioxus/worker/src/: lib.rs
examples/cloudflare-worker/src/: lib.rs
openai-oxide/: SKILL.md
openai-oxide-macros/: Cargo.toml
openai-oxide-macros/src/: lib.rs
openai-oxide-macros/tests/: macro_test.rs
openai-oxide-node/: Cargo.toml  README.md  compat.d.ts  compat.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.js  zod.js
openai-oxide-node/examples/: 01_basic_request.js  02_streaming.js  03_websocket.js
openai-oxide-node/npm/darwin-arm64/: package.json
openai-oxide-node/npm/darwin-x64/: package.json
openai-oxide-node/npm/linux-arm64-gnu/: package.json
openai-oxide-node/npm/linux-arm64-musl/: package.json
openai-oxide-node/npm/linux-x64-gnu/: package.json
openai-oxide-node/npm/linux-x64-musl/: package.json
openai-oxide-node/npm/win32-x64-msvc/: package.json
openai-oxide-node/scripts/: npm-publish-with-skip.mjs
openai-oxide-node/src/: lib.rs
openai-oxide-python/: Cargo.toml  README.md  pyproject.toml
openai-oxide-python/examples/: bench_python.py
openai-oxide-python/openai_oxide/: __init__.py  compat.py
openai-oxide-python/openai_oxide/libopenai_oxide.dylib.dSYM/Contents/: Info.plist
openai-oxide-python/src/: lib.rs
openai-oxide-types/: Cargo.toml
openai-oxide-types/src/: lib.rs
openai-oxide-types/src/responses/: common.rs  create.rs  extra.rs  input.rs  mod.rs  output.rs  response.rs  streaming.rs  tools.rs
openai-types/: Cargo.toml
openai-types/src/batch/: _gen.rs  manual.rs  mod.rs
openai-types/src/beta/: _gen.rs  manual.rs  mod.rs
openai-types/src/chat/: _gen.rs  manual.rs  mod.rs
openai-types/src/embedding/: _gen.rs  manual.rs  mod.rs
openai-types/src/file/: _gen.rs  manual.rs  mod.rs
openai-types/src/fine_tuning/: _gen.rs  manual.rs  mod.rs
openai-types/src/image/: _gen.rs  manual.rs  mod.rs
openai-types/src/moderation/: _gen.rs  manual.rs  mod.rs
openai-types/src/realtime/: _gen.rs  manual.rs  mod.rs
openai-types/src/responses/: common.rs  create.rs  input.rs  response.rs  tools.rs
openai-types/src/shared/: common.rs  mod.rs  pagination.rs
openai-types/src/uploads/: _gen.rs  manual.rs  mod.rs
scripts/: migrate_types.py  py2rust.py  sync-spec.sh
src/: anthropic.rs  azure.rs  client.rs  cloudflare.rs  config.rs  error.rs  hedged.rs  lib.rs  macros.rs  middleware.rs  pagination.rs  parsing.rs  rate_limit.rs  rate_limit_test.rs  stream_helpers.rs  streaming.rs  websocket.rs  ws_pool.rs
src/resources/: audio.rs  batches.rs  embeddings.rs  files.rs  fine_tuning.rs  images.rs  mod.rs  models.rs  moderations.rs  responses.rs  uploads.rs
src/resources/beta/: assistants.rs  mod.rs  realtime.rs  runs.rs  threads.rs  vector_stores.rs
src/resources/chat/: mod.rs
src/types/: batch.rs  beta.rs  chat.rs  common.rs  embedding.rs  file.rs  fine_tuning.rs  image.rs  mod.rs  moderation.rs  realtime.rs  responses.rs  upload.rs
tests/: openapi_coverage.rs
