[package]
name = "openai-oxide"
version = "0.6.0"
edition = "2024"
description = "Idiomatic Rust client for the OpenAI API — 1:1 parity with the official Python SDK"
license = "MIT"
repository = "https://github.com/fortunto2/openai-rust"
readme = "README.md"
keywords = ["openai", "gpt", "ai", "llm", "chatgpt"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [".solo/", ".githooks/", "docs/", "CLAUDE.md", "Makefile"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
pin-project-lite = "0.2"
base64 = { version = "0.22", optional = true }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_yaml = "0.9"
openapiv3 = "2"

[features]
default = ["chat", "responses", "embeddings", "images", "audio", "files", "fine-tuning", "models", "moderations", "batches", "uploads", "beta"]
full = ["chat", "responses", "embeddings", "images", "audio", "files", "fine-tuning", "models", "moderations", "batches", "uploads", "beta"]
chat = []
responses = []
embeddings = []
images = ["base64"]
audio = []
files = []
fine-tuning = []
models = []
moderations = []
batches = []
uploads = []
beta = []
live-tests = []

[[example]]
name = "chat"
required-features = ["chat"]

[[example]]
name = "chat_stream"
required-features = ["chat"]

[[example]]
name = "structured_output"
required-features = ["chat"]

[[example]]
name = "tool_calling"
required-features = ["chat"]

[[example]]
name = "responses_api"
required-features = ["responses"]
