[workspace]
members = [".", "openai-oxide-macros", "openai-oxide-node", "openai-types"]
exclude = ["openai-oxide-python", "examples/cloudflare-worker/", "examples/cloudflare-worker-dioxus/worker", "benchmarks/rust-compare"]


[package]
name = "openai-oxide"
version = "0.10.2"
edition = "2024"
description = "Idiomatic Rust client for the OpenAI API — 1:1 parity with the official Python SDK"
license = "MIT"
repository = "https://github.com/fortunto2/openai-oxide"
documentation = "https://fortunto2.github.io/openai-oxide/"
homepage = "https://github.com/fortunto2/openai-oxide"
readme = "README.md"
keywords = ["openai", "gpt", "ai", "llm", "chatgpt"]
categories = ["api-bindings", "asynchronous", "wasm", "web-programming::http-client"]
exclude = [".solo/", ".githooks/", "docs/", "CLAUDE.md", "Makefile"]

[dependencies]
openai-oxide-macros = { version = "0.1.0", path = "openai-oxide-macros", optional = true }
openai-types = { version = "0.1.0", path = "openai-types", default-features = false, features = [
    "audio", "chat", "responses", "realtime", "embedding", "image", "file", "model",
    "moderation", "batch", "uploads", "beta", "websocket", "shared",
    "completion", "containers", "conversations", "evals", "fine-tuning", "graders",
    "skills", "vector-stores", "video", "webhooks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
pin-project-lite = "0.2"
base64 = { version = "0.22", optional = true }
simd-json = { version = "0.17", optional = true }
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-native-roots"] }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
schemars = { version = "0.8", optional = true }
async-trait = "0.1.89"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json", "stream", "multipart", "gzip", "http2", "query"] }
reqwest012 = { package = "reqwest", version = ">=0.12, <0.13", default-features = false, features = ["rustls-tls-no-provider", "json", "stream", "multipart", "gzip", "http2"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["websocket"], optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_yaml = "0.9"
openapiv3 = "2"

[features]
default = ["chat", "responses", "embeddings", "images", "audio", "files", "fine-tuning", "models", "moderations", "batches", "uploads", "beta"]
full = ["chat", "responses", "embeddings", "images", "audio", "files", "fine-tuning", "models", "moderations", "batches", "uploads", "beta"]
chat = []
responses = []
embeddings = []
images = ["base64"]
audio = []
files = []
fine-tuning = []
models = []
moderations = []
batches = []
uploads = []
beta = []
macros = ["dep:openai-oxide-macros"]
live-tests = []
simd = ["dep:simd-json"]
websocket = ["dep:tokio-tungstenite"]
websocket-wasm = ["dep:gloo-net", "dep:web-sys"]
webhooks = ["dep:hmac", "dep:sha2", "base64"]
structured = ["dep:schemars"]
reqwest-012 = ["dep:reqwest012"]

[[example]]
name = "chat"
required-features = ["chat"]

[[example]]
name = "chat_stream"
required-features = ["chat"]

[[example]]
name = "structured_output"
required-features = ["chat"]

[[example]]
name = "tool_calling"
required-features = ["chat"]

[[example]]
name = "responses_api"
required-features = ["responses"]

[[example]]
name = "benchmark"
required-features = ["responses"]

[[example]]
name = "websocket"
required-features = ["websocket", "responses"]

[[example]]
name = "ws_stress"
required-features = ["websocket", "responses"]

[[example]]
name = "integration_test"
required-features = ["websocket", "responses"]

[[example]]
name = "live_features_test"
required-features = ["structured", "chat", "responses"]
