[package]
name = "openai-oxide-node"
version = "0.9.5"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.32"
napi = { version = "3.0.0-alpha", default-features = false, features = ["napi4", "async", "serde-json"] }
napi-derive = "3.0.0-alpha"
openai-oxide = { path = "..", default-features = false, features = ["chat", "responses", "websocket"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"
