[project]
name = "openai-oxide"
version = "0.9.7"
description = "Fastest OpenAI client — Rust core with Python bindings"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
authors = [
  { name="Rustam", email="info@life2film.com" }
]
urls = { Repository = "https://github.com/fortunto2/openai-oxide" }

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.7",
    "pytest>=8",
    "openai>=2.0",
]
