[package]
name = "openai-oxide-types"
version = "0.1.0"
edition = "2021"
description = "Typed OpenAI API models — zero dependencies beyond serde"
license = "MIT"
repository = "https://github.com/fortunto2/openai-oxide"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
