[workspace]

[package]
name = "rust-compare"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench"
path = "main.rs"

[dependencies]
openai-oxide = { path = "../..", features = ["responses", "chat"] }
async-openai = { version = "0.34", features = ["responses"] }
genai = "0.6.0-beta.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
