[workspace]

[package]
name = "oxide-cloudflare-worker"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
openai-oxide = { path = "../..", default-features = false, features = ["chat", "responses"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
