[package]
name = "dioxus-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5.0", features = ["web"] }
dioxus-logger = "0.5.0"
tracing = "0.1"
web-sys = { version = "0.3", features = ["Window", "Location"] }
gloo-net = { version = "0.3", features = ["websocket"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "sync"] }
wasm-bindgen-futures = "0.4"
