[package]
name = "dioxus-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7" }
openai-oxide = { path = "../../..", default-features = false, features = ["chat", "websocket-wasm", "responses"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio = { version = "1.0", features = ["sync"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
